# dualgaze

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.base.json  tsconfig.json  vite.config.ts
backend/: CMakeLists.txt  README.md
backend/src/: main.cpp
backend/src/http/: routes.cpp  routes.h  server.cpp  server.h
datas/: 3dtiles.json  README.md  metadata.xml
datas/Tile/: Tile.b3dm  Tile.json  Tile_L16_0.b3dm  Tile_L17_00.b3dm  Tile_L18_000.b3dm  Tile_L19_0000.b3dm  Tile_L19_0001.b3dm  Tile_L19_0002.b3dm  Tile_L19_0003.b3dm  Tile_L20_00000.b3dm  Tile_L20_00001.b3dm  Tile_L20_00002.b3dm  Tile_L20_00003.b3dm  Tile_L20_00010.b3dm  Tile_L20_00011.b3dm  Tile_L20_00012.b3dm  Tile_L20_00013.b3dm  Tile_L20_00020.b3dm  Tile_L20_00021.b3dm  Tile_L20_00022.b3dm  Tile_L20_00023.b3dm  Tile_L20_00030.b3dm  Tile_L20_00031.b3dm  Tile_L20_00032.b3dm  Tile_L20_00033.b3dm  Tile_L21_000000.b3dm  Tile_L21_000001.b3dm  Tile_L21_000002.b3dm  Tile_L21_000010.b3dm  Tile_L21_000011.b3dm  Tile_L21_000012.b3dm  Tile_L21_000020.b3dm  Tile_L21_000021.b3dm  Tile_L21_000022.b3dm  Tile_L21_000023.b3dm  Tile_L21_000030.b3dm  Tile_L21_000031.b3dm  Tile_L21_000032.b3dm  Tile_L21_000033.b3dm  Tile_L21_000100.b3dm  (+94 more)
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: facade-scan-algorithm.md  facade-ux-v3.md  location-feature-design.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  App.vue  main.tsx
resources/: pencil-new.pen
shared/: package.json
shared/src/: api-types.ts  index.ts
src/: App.tsx  index.css  main.ts  main.tsx  pointcloud.ts  polygon-picker.ts  style.css  viewer.ts
src/components/: CreateMissionModal.tsx  FacadeConfigPanel.tsx  FacadeEmptyGuide.tsx  FacadeFaceList.tsx  FacadeLoadingOverlay.tsx  FacadePickerHud.tsx  FacadeQuickAddButton.tsx  FacadeSafetyBadge.tsx  FacadeScanList.tsx  FacadeStartCta.tsx  FpvWindow.tsx  LocationSearchTab.tsx  MappingScanList.tsx  MissionConfigPanel.tsx  MissionLibrary.tsx  PlaybackBar.tsx  RightSheet.tsx  TilesetChip.tsx  TilesetSourcePicker.tsx  TopBar.tsx  ViewToggle.tsx  WaypointActionsPanel.tsx  (+1 more)
(+86 files in other folders)
